# asmr-ai-translator-ja2zh

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  visualize_pipeline.py
asr/: asr_cli.py  demucs_cli.py  engine.py  pyproject.toml  setup.ps1  setup.sh
asr/qwen_env/: pyproject.toml
docs/: asr-cleanup-prompt-template.md  asr-cleanup.gbnf  glossary-translation-no-en.gbnf  glossary-translation-prompt-template.md  glossary-translation.gbnf  metadata-extraction-pass1.gbnf  metadata-extraction-prompt-template.md  metadata-translation-prompt-template.md  metadata-translation.gbnf  plan-ytdlp-support.md  translation-base.gbnf  translation-echo.gbnf
src/: cli.ts  config.ts
src/pipeline/: asr-repairer.ts  asr-runner.ts  fetch-metadata.ts  grammar-generator.ts  metadata-extractor.ts  output-writer.ts  prompt-builder.ts  subtitle-exporter.ts  transcript-cleaner.ts  translator.ts  windowing.ts  ytdlp-runner.ts
src/server/: llama-server-manager.ts  llm-client.ts
src/util/: sanitize-path.ts  types.ts
