[project]
name = "translator-asr-qwen"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "qwen_asr",
    "transformers==4.57.6",
    "torch",
    "torchaudio",
    "rocm-sdk-core",
    "rocm-sdk-libraries-custom",
    "rocm",
    "faster-whisper",
    "librosa",
    "soundfile",
    "scipy",
]

[tool.uv.sources]
qwen_asr = { git = "https://github.com/QwenLM/Qwen3-ASR.git" }
torch = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torch-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchaudio-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
rocm-sdk-core = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_core-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_libraries_custom-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm-7.2.0.dev0.tar.gz" }
