[project]
name = "translator-asr-qwen"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "qwen_asr",
    "transformers==4.57.6",
    "torch",
    "torchaudio",
    "triton==3.5.1+rocm7.2.1.gita272dfa8; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "rocm-sdk-core; sys_platform == 'win32'",
    "rocm-sdk-libraries-custom; sys_platform == 'win32'",
    "rocm; sys_platform == 'win32'",
    "librosa",
    "soundfile",
    "scipy",
]

[tool.uv.sources]
qwen_asr = { git = "https://github.com/QwenLM/Qwen3-ASR.git" }
torch = [
    { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torch-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.1/torch-2.9.1%2Brocm7.2.1.lw.gitff65f5bc-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
]
torchaudio = [
    { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchaudio-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.1/torchaudio-2.9.0%2Brocm7.2.1.gite3c6ee2b-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
]
triton = [
    { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.1/triton-3.5.1%2Brocm7.2.1.gita272dfa8-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
]
rocm-sdk-core = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_core-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_libraries_custom-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm-7.2.0.dev0.tar.gz" }
